    can use OPR on systems without an Oracle installation to e.g. list, retrieve
    and delete passwords from the repository. 
  * added -f flag to forcibly add a password entry without verification on the
    database.
  * bugfix: ocisessionend function was not initialized.
  * bugfix: when retrieving a password, schemaname was case sensitive.
  * currently database is converted to uppercase, and schemaname to lowercase. 
    OSuser is left untouched.
  * raised max. repository entries from 1024 to 4096
  * minor cosmetic changes
17-06-2005 1.1.7 J.M.Spit <jmspit@euronet.nl>
  * Removed possible buffer overflow in askPassword.
  
29-06-2005 1.1.8 J.M.Spit <jmspit@euronet.nl>
  * the dlopen scheme based on the ORACLE_HOME environment var was vulnerable to
    a malicious libclnstsh.so attack. opr now only loads a libclntsh.so lib that
    is located in the default (*:) ORACLE_HOME/lib32 or ORACLE_HOME/lib listed 
    in the machine's oratab.
    
30-11-2005 1.1.9 J.M.Spit <jmspit@euronet.nl>
  * The INSTALL file informed that you need to be able to see the oracle oci 
    libraries, but it fact you need these only at runtime. You do need access
    to the OCI headers files during runtime though. But these rights are enabled
    by default oracle installations.
  * opr now uses libltdl, a dynamic loading abstraction, to tackle compiling
    issues on (for example) hp-ux.
  * added file locking on the repository file.
  * fixed 2 strncat invocation bugs.

20-03-2006 1.1.10 J.M.Spit <jmspit@euronet.nl>
  * switched from lockf to fcntl file locking calls for better platform 
    independence.

26-07-2006 1.1.11 J.M.Spit <jmspit@euronet.nl>
  * minimal change to prevent compile error with older versions of gcc

14-05-2013 1.1.12 J.M.Spit <jmspit@euronet.nl>
  * added checks for inclusion of librt (or posix4) on Solaris for nanosleep
  * updated autoconf to recognize modern linux systems
  * fixed autoconf issues with libtdl
