@@ -29,6 +29,7 @@
 #include <pwd.h>
 #include <errno.h>
 #include <fcntl.h>
+#include <string.h>
 #ifdef HAVE_CONFIG_H
   #include "config.h"
 #endif
